create colum avatar on user avatar
