# src/routes/account.routes.ts
@@ -1,11 +1,18 @@
 import { Request, Response, Router } from 'express'
+import multer from 'multer'
 import { container } from 'tsyringe'
+import { ensureAuthenticated } from '../middlewares/ensureAuthentiticated'
 import { ICreateUserDTO } from '../modules/accounts/dtos/ICreateUserDTO'
 import { ILoginDTO } from '../modules/accounts/dtos/ILoginDTO'
 import { AuthenticateUserController } from '../modules/accounts/useCases/authenticateUser/AuthenticateUserController'
 import { CreateUserController } from '../modules/accounts/useCases/createUser/CreateUserController'
+import { UpdateUserAvatarController } from '../modules/accounts/useCases/updateUserAvatar/UpdateUserAvatarController'
 
 const accountRoutes = Router()
+
+const upload = multer({
+  dest: './tmp'
+})
 
 accountRoutes.post('/', async (req: Request<{}, {}, ICreateUserDTO>, res: Response) => {
   /*
@@ -65,6 +72,33 @@ accountRoutes.post('/login', async (req: Request<{}, {}, ILoginDTO>, res: Respon
           }
   */
   return await container.resolve(AuthenticateUserController).handle(req, res)
+})
+
+accountRoutes.use(ensureAuthenticated)
+
+accountRoutes.put('/avatar', upload.single('file'), async (req: Request<any, any, any, any, Record<string, any>>, res: Response) => {
+  /*
+        #swagger.requestBody = {
+              required: true,
+              content: {
+                  "multipart/form-data": {
+                      "schema": {
+                        "type": "object",
+                        "properties": {
+                          "file": {
+                            "type": "string",
+                            "format": "binary"
+                          }
+                        }
+                       },
+                  }
+              }
+          }
+        #swagger.responses[201] = {
+          description: "Created",
+        }
+  */
+  return await container.resolve(UpdateUserAvatarController).handle(req, res)
 })
 
 export {
